Version 20   2013-October-18

--Fixed bug that allowed wife to shoot robber while robber is on welcome mat,
  allowing robber to strangely recover from death by leaving the house (thanks 
  Colorfusion).

--Fixed tape playback page title text when tape value represents a bounty
  earned.

--Sleeping animals no longer jump back (mysteriously, while sleeping) to their
  original location after a successful robbery.

--Improved visibility of sleeping animals by bringing them up above wall
  shadows and giving them dark outlines just like other living mobiles.

--Returned to v15-style animal movement (animals start following/fleeing when
  they see you, but continue moving toward/away from you even after you move
  out of view).

--Added a panic button that can be pressed by family as they run out.

--Moved shotgun up slightly to make it more visible when surrounded by walls.

--Changed so that murder bounty is based on total number of people killed
  instead of just counting each murderous outing.





Version 19   Live Server Fixes

--Wired wooden walls brought back to the game.

--Added a price tweak factors on server so that overall tile/tool price ratios
  can be adjusted more easily.  Started off with tile prices tweaked down to
  2/5 what they used to be (to allow more house building with the starting
  budget).




Version 19   2013-October-15

--Fixed an obscure bug where the tool/tile grid-picker pages could get stuck in
  a state where they would repeatedly kick you out of your house (thanks Josh
  Collins).

--Added a bounty that builds up on a robber over time to be earned by whatever
  house finally kills the robber (starting bounty 500, +500 for each theft,
  +1000 for each instance of murder).  Trying bounties in conjuction with no
  salaries (thanks Joshua Collins).

--Added a shotgun object that can be placed in the house and picked up by the
  wife as she walks across it.  Kills robber short range (when adjacent).  Wife